correct spelling of OMP_NUM_THREADS

--- a/notebooks/sample_data_clustering.ipynb
+++ b/notebooks/sample_data_clustering.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "This notebook demonstrates how code from the mr-fitty package can be used to develop additional tools for working with XAFS data.\n",
     "\n",
-    "Note: when using MKL set OPM_NUM_THREADS=1."
+    "Note: when using MKL set OMP_NUM_THREADS=1."
    ]
   },
   {
@@ -823,7 +823,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
