find the example data

--- a/notebooks/best_subset_selection_arsenic.ipynb
+++ b/notebooks/best_subset_selection_arsenic.ipynb
@@ -33,31 +33,44 @@
     "\n",
     "import sklearn.utils\n",
     "\n",
-    "from mrfitty.base import ReferenceSpectrum\n",
-    "from mrfitty.base import InterpolatedSpectrumSet\n",
+    "import mrfitty\n",
+    "from mrfitty.base import (\n",
+    "    AdaptiveEnergyRangeBuilder,\n",
+    "    InterpolatedSpectrumSet,\n",
+    "    ReferenceSpectrum,\n",
+    ")\n",
+    "from mrfitty.best_subset_selection import BestSubsetSelectionFitTask\n",
+    "from mrfitty.linear_model import NonNegativeLinearRegression\n",
     "\n",
     "logging.basicConfig(level=logging.WARN)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mrfitty' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-de8ed5a7bfad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#sample_data_dir_path = os.path.join(sys.prefix, 'sample_data')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msample_data_dir_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmrfitty\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbase\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'sample_data'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'sample data is installed at \"{}\"'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_data_dir_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_data_dir_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mrfitty' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample data is installed at \"/home/jklynch/host/project/mr-fitty/src/example/arsenic\"\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample_data_dir_path = os.path.join(sys.prefix, 'sample_data')\n",
+    "src_path, _ = os.path.split(mrfitty.__path__[0])\n",
+    "sample_data_dir_path = os.path.join(src_path, 'example', 'arsenic')\n",
     "print('sample data is installed at \"{}\"'.format(sample_data_dir_path))\n",
     "os.path.exists(sample_data_dir_path)"
    ]
@@ -71,9 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample data reference glob: /home/jklynch/host/project/mr-fitty/src/example/arsenic/reference/*als_cal*.e\n",
+      "sample data unknown glob: /home/jklynch/host/project/mr-fitty/src/example/arsenic/unknown/*.e\n"
+     ]
+    }
+   ],
    "source": [
     "sample_data_reference_glob = os.path.join(sample_data_dir_path, 'reference/*als_cal*.e')\n",
     "print('sample data reference glob: {}'.format(sample_data_reference_glob))\n",
@@ -83,13 +105,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample data reference file count: 20\n",
+      "sample data unknown file count: 16\n"
+     ]
+    }
+   ],
    "source": [
-    "sample_data_reference_list, _ = list(ReferenceSpectrum.read_all([sample_data_reference_glob]))\n",
+    "sample_data_reference_set, _ = list(ReferenceSpectrum.read_all([sample_data_reference_glob]))\n",
+    "sample_data_reference_list = list(sample_data_reference_set)\n",
     "print('sample data reference file count: {}'.format(len(sample_data_reference_list)))\n",
-    "sample_data_unknown_list, _ = list(ReferenceSpectrum.read_all([sample_data_unknown_glob]))\n",
+    "sample_data_unknown_set, _ = list(ReferenceSpectrum.read_all([sample_data_unknown_glob]))\n",
+    "sample_data_unknown_list = list(sample_data_unknown_set)\n",
     "print('sample data unknown file count: {}'.format(len(sample_data_unknown_list)))"
    ]
   },
@@ -102,12 +135,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reference minimum energy: 11830.00\n",
+      "reference maximum energy: 12097.14\n"
+     ]
+    }
+   ],
    "source": [
-    "reference_min_energy = np.max([r.data_df.energy.values[0] for r in sample_data_reference_list])\n",
-    "reference_max_energy = np.min([r.data_df.energy.values[-1] for r in sample_data_reference_list])\n",
+    "reference_min_energy = np.max([r.data_df.index.values[0] for r in sample_data_reference_list])\n",
+    "reference_max_energy = np.min([r.data_df.index.values[-1] for r in sample_data_reference_list])\n",
     "print('reference minimum energy: {:5.2f}'.format(reference_min_energy))\n",
     "print('reference maximum energy: {:5.2f}'.format(reference_max_energy))"
    ]
@@ -121,157 +163,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "minimum energy: 11777.73\n",
+      "maximum energy: 12171.83\n"
+     ]
+    }
+   ],
    "source": [
-    "min_energy = np.max([r.data_df.energy.values[0] for r in sample_data_unknown_list])\n",
-    "max_energy = np.min([r.data_df.energy.values[-1] for r in sample_data_unknown_list])\n",
+    "min_energy = np.max([r.data_df.index.values[0] for r in sample_data_unknown_list])\n",
+    "max_energy = np.min([r.data_df.index.values[-1] for r in sample_data_unknown_list])\n",
     "print('minimum energy: {:5.2f}'.format(min_energy))\n",
     "print('maximum energy: {:5.2f}'.format(max_energy))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "interpolate_energy_range = np.linspace(start=reference_min_energy, stop=reference_max_energy, num=200)\n",
-    "print('interpolate_energy_range.shape: {}'.format(interpolate_energy_range.shape))\n",
-    "print('interpolate_energy_range:\\n{}'.format(pprint.pformat(interpolate_energy_range.tolist()[:10])))"
+    "Plot one fit with training and testing points marked."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "224\n",
+      "0\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-24f7172ec1ab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mtrain_test_ndx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munknown_0\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_test_ndx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mtrain_test_ndx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtest_index\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munknown_0\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0munknown_0\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrain_test_ndx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmarker\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
+     ]
+    }
+   ],
    "source": [
-    "# construct a single DataFrame with all interpolated reference and unknown spectra\n",
-    "interpolated_sample_data_reference_and_unknown_df = InterpolatedSpectrumSet.get_interpolated_spectrum_set_df(\n",
-    "    energy_range=interpolate_energy_range,\n",
-    "    spectrum_set=set(itertools.chain(sample_data_reference_list, sample_data_unknown_list)))\n",
-    "interpolated_sample_data_reference_and_unknown_df.plot().legend(loc='center left', bbox_to_anchor=(1, 0.5))\n",
-    "interpolated_sample_data_reference_and_unknown_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this is a helper function for cluster_with_sig_cut\n",
-    "def permute_row_elements(df):\n",
-    "    for i in range(df.shape[0]):\n",
-    "        df.values[i, :] = sklearn.utils.shuffle(df.values[i, :])\n",
-    "    return df\n",
-    "# demonstrate permuting row elements\n",
-    "x_df = pd.DataFrame(data=np.array(range(9)).reshape((3,3)))\n",
-    "print('before permuting row elements:')\n",
-    "print(x_df.head())\n",
-    "permute_row_elements(x_df)\n",
-    "print('after permuting row elements:')\n",
-    "print(x_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cluster_with_sig_cut(variable_by_sample_df, title, pdist_metric, linkage_method):\n",
-    "    #pdist_metric = 'correlation'\n",
-    "    distance_for_sample_pairs = pdist(X=np.transpose(variable_by_sample_df.values), metric=pdist_metric)\n",
-    "    print('{}: {} sample pairs'.format(title, len(distance_for_sample_pairs)))\n",
-    "    plt.figure()\n",
-    "    plt.title(title)\n",
-    "    plt.hist(distance_for_sample_pairs)\n",
-    "    plt.xlabel('{} distance'.format(pdist_metric))\n",
-    "    plt.ylabel('{} pairs'.format(variable_by_sample_df.shape))\n",
-    "    plt.show()\n",
+    "unknown_0 = sample_data_unknown_list[0]\n",
     "\n",
-    "    resample_count = 1000\n",
-    "    expected_distance_list = []\n",
-    "    for i in range(resample_count):\n",
-    "        # permute the elements of each row of variable_by_sample_df\n",
-    "        p_variable_by_sample_df = permute_row_elements(variable_by_sample_df.copy())\n",
-    "        p_distance_for_sample_pairs = pdist(X=np.transpose(p_variable_by_sample_df.values), metric=pdist_metric)\n",
-    "        p_linkage_distance_variable_by_sample = hc.linkage(y=p_distance_for_sample_pairs, method=linkage_method)\n",
-    "        p_dendrogram = hc.dendrogram(Z=p_linkage_distance_variable_by_sample, no_plot=True)\n",
-    "        expected_distance_list.extend([d for (_, _, d, _) in p_dendrogram['dcoord']])\n",
+    "fitter = BestSubsetSelectionFitTask(\n",
+    "    ls=NonNegativeLinearRegression,\n",
+    "    reference_spectrum_list=sample_data_reference_list[0:3],\n",
+    "    unknown_spectrum_list=(unknown_0, ),\n",
+    "    energy_range_builder=AdaptiveEnergyRangeBuilder(),\n",
+    "    best_fits_plot_limit=0,\n",
+    "    component_count_range=(1,3+1)\n",
+    ")\n",
     "\n",
-    "    p = 95.0\n",
-    "    alpha = 1.0 - p/100.0\n",
-    "    cutoff_distance = np.percentile(expected_distance_list, q=p)\n",
-    "    print('cutoff distance is {}'.format(cutoff_distance))\n",
+    "fit_0, _ = fitter.fit(unknown_spectrum=sample_data_unknown_list[0])\n",
     "\n",
-    "    plt.figure()\n",
-    "    plt.hist(expected_distance_list)\n",
-    "    plt.title('dendrogram distance null distribution')\n",
-    "    plt.show()\n",
-    "\n",
-    "    linkage_distance_variable_by_sample = hc.linkage(y=distance_for_sample_pairs, method=linkage_method)\n",
-    "    plt.figure(figsize=(3.7, 7))\n",
-    "    dendrogram = hc.dendrogram(\n",
-    "        Z=linkage_distance_variable_by_sample,\n",
-    "        orientation='left',\n",
-    "        labels=variable_by_sample_df.columns)\n",
-    "    \n",
-    "    icoords = [i for i in itertools.chain(dendrogram['icoord'])]\n",
-    "    \n",
-    "    plt.vlines(cutoff_distance, ymin=np.min(icoords), ymax=np.max(icoords))\n",
-    "    plt.title('{}\\n{} linkage'.format(title, linkage_method))\n",
-    "    plt.xlabel('{} distance'.format(pdist_metric))\n",
-    "    plt.savefig(title + '.pdf', format='pdf')\n",
-    "    plt.show()\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for core in ['ott3',]:\n",
-    "\n",
-    "    ref_column_list = tuple([\n",
-    "        c for \n",
-    "        c in interpolated_sample_data_reference_and_unknown_df.columns \n",
-    "        if any(['als_cal' in c, 'sln' in c, 'OA' in c])])\n",
-    "\n",
-    "    print('reference column list has {} elements:\\n{}'.format(len(ref_column_list), pprint.pformat(ref_column_list)))\n",
-    "\n",
-    "    unknown_column_list = tuple([\n",
-    "        c for \n",
-    "        c in interpolated_sample_data_reference_and_unknown_df.columns\n",
-    "        if core in c.lower()])\n",
-    "\n",
-    "    print('core {} column list has {} elements:\\n{}'.format(core, len(unknown_column_list), pprint.pformat(unknown_column_list)))\n",
-    "\n",
-    "    unknown_interpolated_df = interpolated_sample_data_reference_and_unknown_df.loc[:, unknown_column_list]\n",
-    "    unknown_interpolated_df.plot().legend(loc='center left', bbox_to_anchor=(1, 0.5))\n",
-    "    unknown_interpolated_df.head()\n",
-    "\n",
-    "    unknown_and_reference_column_list = tuple(itertools.chain(unknown_column_list, ref_column_list))\n",
-    "    unknown_and_reference_interpolated_df = interpolated_sample_data_reference_and_unknown_df.loc[:, unknown_and_reference_column_list]\n",
-    "    unknown_and_reference_interpolated_df.plot().legend(loc='center left', bbox_to_anchor=(1, 0.5))\n",
-    "    unknown_and_reference_interpolated_df.head()\n",
-    "\n",
-    "    cluster_with_sig_cut(\n",
-    "        unknown_interpolated_df,\n",
-    "        title='As unknown {} ({} spectra)'.format(core, unknown_interpolated_df.shape[1]),\n",
-    "        pdist_metric='correlation',\n",
-    "        linkage_method='complete')\n",
-    "\n",
-    "    cluster_with_sig_cut(\n",
-    "        unknown_and_reference_interpolated_df,\n",
-    "        title='As unknown {} and references ({} spectra)'.format(core, unknown_and_reference_interpolated_df.shape[1]),\n",
-    "        pdist_metric='correlation',\n",
-    "        linkage_method='complete')\n"
+    "for i, (predicted_b, train_index, test_index) in enumerate(fitter.fit_and_predict(fit_0)):\n",
+    "    #train_test_ndx = np.random.choice([0, 1], unknown_0.data_df.shape[0], p=[0.2, 0.8])\n",
+    "    #predicted_b, train_index, test_index = fitter.fit_and_predict(fit_0)\n",
+    "    print(unknown_0.data_df.shape[0])\n",
+    "    train_test_ndx = np.zeros_like(unknown_0.data_df.shape[0])\n",
+    "    print(train_test_ndx)\n",
+    "    train_test_ndx[test_index] = 1\n",
+    "    f, ax = plt.subplots()\n",
+    "    ax.scatter(unknown_0.data_df.index, unknown_0.data_df.norm, c=train_test_ndx, marker='.')\n",
+    "    plt.show()"
    ]
   },
   {
@@ -299,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
