find example data

--- a/notebooks/hc_sig_cut_archived_tills_As.ipynb
+++ b/notebooks/hc_sig_cut_archived_tills_As.ipynb
@@ -9,20 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jlynch/miniconda3/envs/mrf/lib/python3.5/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import glob\n",
     "import itertools\n",
@@ -43,9 +32,9 @@
     "\n",
     "import sklearn.utils\n",
     "\n",
-    "from mrfitty.base import ReferenceSpectrum, Spectrum, InterpolatedReferenceSpectraSet\n",
+    "from mrfitty.base import AdaptiveEnergyRangeBuilder, ReferenceSpectrum, Spectrum, InterpolatedReferenceSpectraSet\n",
     "from mrfitty.best_subset_selection import BestSubsetSelectionFitTask\n",
-    "from mrfitty.combination_fit import AdaptiveEnergyRangeBuilder, AllCombinationFitTask\n",
+    "from mrfitty.combination_fit import AllCombinationFitTask\n",
     "from mrfitty.loss import NormalizedSumOfSquares, PredictionError\n",
     "\n",
     "logging.basicConfig(level=logging.WARN)"
@@ -53,10 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class InterpolatedSpectrumSet:\n",
@@ -106,18 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,9 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -160,9 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -190,9 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -220,9 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -243,9 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -275,9 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -545,9 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -640,9 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1082,9 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1244,9 +1211,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [mrf]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [mrf]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1258,9 +1225,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
