--- a/notebooks/prediction_error_fit_arsenic.ipynb
+++ b/notebooks/prediction_error_fit_arsenic.ipynb
@@ -43,7 +43,9 @@
     "from mrfitty.prediction_error_fit import PredictionErrorFitTask\n",
     "from mrfitty.linear_model import NonNegativeLinearRegression\n",
     "\n",
-    "logging.basicConfig(level=logging.WARN)"
+    "logging.basicConfig(level=logging.WARN)\n",
+    "\n",
+    "print(plt.get_backend())"
    ]
   },
   {
@@ -53,7 +55,7 @@
    "outputs": [],
    "source": [
     "src_path, _ = os.path.split(mrfitty.__path__[0])\n",
-    "sample_data_dir_path = os.path.join(src_path, 'example', 'arsenic')\n",
+    "sample_data_dir_path = os.path.join(src_path, 'mrfitty', 'example', 'arsenic')\n",
     "print('sample data is installed at \"{}\"'.format(sample_data_dir_path))\n",
     "os.path.exists(sample_data_dir_path)"
    ]
@@ -265,7 +267,7 @@
     "        c='orange',\n",
     "        marker='.'\n",
     "    )\n",
-    "    ax[1].hist()\n",
+    "    #ax[1].hist()\n",
     "    plt.show()"
    ]
   },
@@ -280,7 +282,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -294,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
